add header element

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eum
+        aut omnis, nulla, tempora repudiandae et blanditiis autem voluptate in
+        expedita corrupti corporis, eos quis facilis! Numquam et inventore
+        reprehenderit.
+      </div>
+    </header>
+  </body>
 </html>
